# shmemcam-rs

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  installer.rs  main.rs  uninstaller.rs  util.rs
