[package]
    edition = "2024"
    name    = "shmemcam"
    version = "0.1.0"

[dependencies]
    nokhwa = {version = "0.10.7", default-features = false, features = [
        "camera-sync-impl",
        "input-msmf",
        "output-threaded"
    ]}
    windows-service = "0.8.0"
    winmmf = "0.4"

[features]
    default = ["to_pub"]
    to_pub  = []

[[bin]]
    name = "shmemcam"
    path = "src/main.rs"

[[bin]]
    name = "installer"
    path = "src/installer.rs"

[[bin]]
    name = "uninstaller"
    path = "src/uninstaller.rs"

[target.'cfg(windows)'.dependencies.windows-sys]
    features = [
        "Win32_Foundation",
        "Win32_Storage_FileSystem",
        "Win32_System_Power",
        "Win32_System_RemoteDesktop",
        "Win32_System_Services",
        "Win32_System_SystemServices",
        "Win32_System_Threading",
        "Win32_System_WindowsProgramming",
        "Win32_UI_WindowsAndMessaging"
    ]
    version = "0.59.0"
